syntax = "proto3";

package streaming;

service Shop {
    rpc SubscribeInventory (InventoryRequest) returns (stream InventoryResponse) {}
}

message InventoryRequest {
    string item_name = 1;
}

message InventoryResponse {
    string item_name = 1;
    int32 time = 2;
    int32 quantity = 3;
}
